fixup! CHE-7550: add continuous servers liveness checks